feat: Implement CRUD operations for Item, Supplier, and User modules